[metadata]
name = yappla
version = 0.0.1
author = Daniele Calisi
author_email = calisi@magazino.eu
description = YAPPLA = Yet Another Probabilistic PLAnner (with unified_planning interface)
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = one, two
license = BSD-2-Clause

[options]
packages = yappla, up_yappla
package_dir =
    yappla = yappla
    up_yappla = up_yappla

[options.packages.find]
where = .
include = yappla, up_yappla
